<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Lesson1</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="body_height">身高</string>
    <string name="body_weight">體重</string>
    <string name="submit">輸入</string>
	<string name="intent">換頁傳值</string>
	<string name="create_folder">新建資料夾</string>
	<string name="get_file">取得所有檔案名稱</string>
	<string name="test">測試資料1</string>
	<string name="play">play</string>
	<string name="pause">pause</string>
</resources>