<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_horizontal_margin" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/body_height" />

        <EditText
            android:id="@+id/heightET"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="numberSigned" >

            <requestFocus />
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_horizontal_margin" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/body_weight" />

        <EditText
            android:id="@+id/weightET"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="numberSigned" />
    </LinearLayout>

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_horizontal_margin" >

            <Button
                android:id="@+id/submitBTN"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/submit" />

            <Button
                android:id="@+id/intentBTN"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/intent" />

            <Button
                android:id="@+id/folderBTN"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_folder" />

            <Button
                android:id="@+id/getFileBTN"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/get_file" />
        </LinearLayout>
    </HorizontalScrollView>

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_horizontal_margin" >

            <TextView
                android:id="@+id/bmiTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>